-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Alpha
-
None
-
Windows 10, g++ (i686-win32-dwarf-rev0, Built by MinGW-W64 project) 5.3.0
-
56fd0a173e6f65a4256883c1ba0970fd59c2ba54 (qtdeclarative/5.9, 301.2017, 5.9)
Error shows up qml / r/qv4compiler:
In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerIndexedGetterLookup()': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:110:26: note: 'l' was declared here CompiledData::Lookup l; ^ In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerIndexedSetterLookup()': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:119:26: note: 'l' was declared here CompiledData::Lookup l; ^ In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerGetterLookup(const QString&)': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:128:26: note: 'l' was declared here CompiledData::Lookup l; ^ In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerSetterLookup(const QString&)': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:138:26: note: 'l' was declared here CompiledData::Lookup l; ^ In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerGlobalGetterLookup(const QString&)': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:147:26: note: 'l' was declared here CompiledData::Lookup l; ^ In file included from D:\dev\5-mingw-59\qt-mingw-59\qtbase\include\QtCore\5.9.0\QtCore/private/qjson_p.h:1:0, from compiler/qv4compiler_p.h:55, from compiler\qv4compiler.cpp:40: D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h: In member function 'int QV4::Compiler::JSUnitGenerator::registerRegExp(QV4::IR::RegExp*)': D:/dev/5-mingw-59/qt-mingw-59/qtbase/src/corelib/json/qjson_p.h:187:35: error: 're.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized] uint i = qFromLittleEndian(val); ^ compiler\qv4compiler.cpp:156:26: note: 're' was declared here CompiledData::RegExp re; ^ cc1plus.exe: all warnings being treated as errors cc1plus.exe: all warnings being treated as errors Makefile.Debug:14643: recipe for target '.obj/debug/qv4compiler.o' failed mingw32-make[4]: *** [.obj/debug/qv4compiler.o] Error 1 Makefile:34: recipe for target 'debug' failed mingw32-make[3]: *** [debug] Error 2 Makefile:46: recipe for target 'sub-qml-make_first-ordered' failed mingw32-make[2]: *** [sub-qml-make_first-ordered] Error 2 Makefile:41: recipe for target 'sub-src-make_first' failed mingw32-make[1]: *** [sub-src-make_first] Error 2 Makefile:230: recipe for target 'module-qtdeclarative-make_first' failed mingw32-make: *** [module-qtdeclarative-make_first] Error 2 mingw32-make failed 512: at d:\dev\5-mingw-59\qt-mingw-59\qtrepotools\bin\qt5_tool line 212.
Potentially related change "Fix endian support in compiled data structures" qtdeclarative be491913c036b148cd4f90fa0132e269a507dbad https://codereview.qt-project.org/#/c/164954/