QtQml: Fix developer build with MinGW-W64 / gcc 5.3.0

Assign QJsonPrivate::qle_bitfield<>.val directly to initialize
it instead of using the assignment operator in classes
aggregating it, fixing errors:

qtbase/src/corelib/json/qjson_p.h: In member function 'uint QV4::Compiler::JSUnitGenerator::registerIndexedGetterLookup()':
qtbase/src/corelib/json/qjson_p.h:187:35: error: 'l.QJsonPrivate::qle_bitfield<0, 4>::val' is used uninitialized in this function [-Werror=uninitialized]
         uint i = qFromLittleEndian(val);
                                   ^
compiler\qv4compiler.cpp:110:26: note: 'l' was declared here
     CompiledData::Lookup l;

Disable -Wuninitialized in

 QV4::Moth::InstructionSelection::callBuiltinConvertThisToObject()
 and callBuiltinPopScope(), fixing errors:

 In member function 'virtual void QV4::Moth::InstructionSelection::callBuiltinPopScope()':
compiler\qv4isel_moth.cpp:1188:38: error: '*((void*)& call +4)' is used uninitialized in this function [-Werror=uninitialized]
     Instruction::CallBuiltinPopScope call;
^
compiler\qv4isel_moth.cpp: In member function 'virtual void QV4::Moth::InstructionSelection::callBuiltinConvertThisToObject()':
compiler\qv4isel_moth.cpp:1338:49: error: '*((void*)& call +4)' is used uninitialized in this function [-Werror=uninitialized]
     Instruction::CallBuiltinConvertThisToObject call;

Task-number: QTBUG-58476
Change-Id: I3448cd8b75e9588ffb1bcc1526a56450731f1744
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>